<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>

    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <!-- «Поделиться приложением»: Текст сообщения содержит ссылку на курс по Андроид-разработке в Практикуме    -->
    <string name="practicum_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">amezitova@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью \n
        \n
        Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button">Обновить</string>

    <string name="search_history_massage_text">Вы искали</string>
    <string name="clear_history_button_text">Очистить историю</string>

    <string name="track_time">Длительность</string>
    <string name="album_name">Альбом</string>
    <string name="release_year">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>


</resources>