<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/MainActivityStyle"
    android:padding="@dimen/start_padding">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top">  <!-- Весь контент внутри будет сверху -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>
    </FrameLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_marginTop="24dp"
        style="@style/MainActivityButtonStyle"
        android:text="@string/search"
        app:icon="@drawable/search" />
    <Button
        android:id="@+id/button_media_library"
        style="@style/MainActivityButtonStyle"
        android:text="@string/library"
        app:icon="@drawable/library"/>
    <Button
        android:id="@+id/button_settings"
        style="@style/MainActivityButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/settings"
        android:layout_marginBottom="12dp"/>
</LinearLayout>
    <!--style="@style/MainButtons" -->