<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    style="@style/SearchActivityStyle"
    tools:context=".Player">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0444"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0667"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9556"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9333"/>


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            style="@style/MyToolbarTitle"
            android:layout_width="360dp"
            app:navigationIcon="@drawable/ic_back_arrow_48"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/audio_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_24"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar"
            app:layout_constraintDimensionRatio="1:1"
            tools:src="@drawable/placeholder"/>

        <TextView
            android:id="@+id/audio_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/PlayerTextRegular"
            android:fontFamily = "@font/ys_display_medium"
            android:textSize="22sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/audio_image"
            tools:text="Название трека" />

        <TextView
            android:id="@+id/audio_artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PlayerTextRegular"
            android:textSize="14sp"
            android:fontFamily = "@font/ys_display_medium"
            android:layout_marginTop="12dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            app:layout_constraintTop_toBottomOf="@+id/audio_name"
            tools:text="Описание" />
        <ImageView
            android:id="@+id/queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/audio_artist_name"
            app:layout_constraintStart_toStartOf="@id/left_guideline_24"
            android:layout_marginTop="54dp"
            android:src="@drawable/queue"/>
        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="55dp"
            app:layout_constraintTop_toBottomOf="@+id/audio_artist_name"
            app:layout_constraintStart_toEndOf="@+id/queue"
            app:layout_constraintEnd_toStartOf="@+id/favourite"
            android:src="@drawable/play"/>
        <ImageView
            android:id="@+id/favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            app:layout_constraintTop_toBottomOf="@+id/audio_artist_name"
            app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
            android:src="@drawable/favourite"/>
        <TextView
            android:id="@+id/progress_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTextRegular"
            android:layout_marginTop="4dp"
            android:textFontWeight="500"
            app:layout_constraintTop_toBottomOf="@+id/play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="00:00"/>
        <TextView
            android:id="@+id/aidio_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTrackDescription"
            android:layout_marginTop="39dp"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/progress_time"
            android:text="@string/track_time"/>
        <TextView
            android:id="@+id/audio_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTextRegular"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            app:layout_constraintBaseline_toBaselineOf="@+id/aidio_time_text"
            tools:text="05:30"/>
        <TextView
            android:id="@+id/album_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="barrier_target"
            style="@style/PlayerTrackDescription"
            app:layout_constraintTop_toBottomOf="@+id/aidio_time_text"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"
            android:text="@string/album_name"/>

        <TextView
            android:id="@+id/album_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="end"
            style="@style/PlayerTextRegular"
            app:layout_constraintBaseline_toBaselineOf="@+id/album_name_text"
            app:layout_constraintStart_toEndOf="@id/album_name_text"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            tools:text="Очень длинное название альбома, которое должно обрезаться"/>

        <TextView
            android:id="@+id/release_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTrackDescription"
            app:layout_constraintTop_toBottomOf="@+id/album_name_text"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"
            android:text="@string/release_year"/>
        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTextRegular"
            app:layout_constraintBaseline_toBaselineOf="@+id/release_date_text"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            tools:text="1995"/>

        <TextView
            android:id="@+id/genre_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTrackDescription"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/release_date_text"
            android:text="@string/genre_name"/>
        <TextView
            android:id="@+id/genre_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTextRegular"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            app:layout_constraintBaseline_toBaselineOf="@+id/genre_name_text"
            tools:text="Жанр"/>

        <TextView
            android:id="@+id/country_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTrackDescription"
            app:layout_constraintStart_toStartOf="@+id/left_guideline_16"
            app:layout_constraintTop_toBottomOf="@+id/genre_name_text"
            android:text="@string/country"/>
        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PlayerTextRegular"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline_16"
            app:layout_constraintBaseline_toBaselineOf="@+id/country_text"
            tools:text="Страна"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>